2011-05-28  Matthias Klose  <doko@ubuntu.com>

	PR 704
	* Makefile.am (ADD_ZERO_EXTRA_BUILD_ENV): Filter-out distribution
	specific jamvm patches.
	(ADD_ZERO_CONFIGURE_ARGS): Filter-out --with-javac.
	(stamps/add-zero.stamp, stamps/add-zero-debug.stamp): Update build target.

2011-05-27  Xerxes Rånby  <xranby@zafena.se>

	* NEWS: Fix previous commits news entry.

2011-05-27  Xerxes Rånby  <xranby@zafena.se>

	JamVM
	- Fix leak of native thread structure.
	- Consistent naming for classlib functions.
	- Add extra includes to get rid off compiler warning.
	- Rework OpenJDK storage of native thread structure.
	- Implement remaining OpenJDK Array reflection interface.
	* NEWS: Updated.
	* Makefile.am
	(JAMVM_VERSION): Updated JamVM to 2011-04-28 revision.
	(JAMVM_SHA256SUM): Updated.

2011-05-27  Andrew John Hughes  <ahughes@redhat.com>

	* NEWS: Add 2.0.
	* configure.ac: Bump to 2.0pre.

2011-05-25  Andrew John Hughes  <ahughes@redhat.com>

	* NEWS:
	Updated with changes since 1.13
	and added URL key from IcedTea6.
	* configure.ac: Bump to 1.14 proper.

2011-05-25  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(ENDORSED_DIR): Removed.
	(ICEDTEA_BOOT_PATCHES): Add xsltproc.patch
	(ICEDTEA_ENV_BOOT): Set XSLT.  Don't
	set ICEDTEA_ENDORSED_DIR or ENDORSED.
	(bootstrap-directory-stage1): Don't link
	xalan2, xerces2 or xalan2 serialiser.
	* acinclude.m4:
	(IT_FIND_XALAN2_JAR): Removed.
	(IT_FIND_XALAN2_SERIALIZER_JAR): Likewise.
	(IT_FIND_XERCES2_JAR): Likewise.
	* configure.ac:
	Replace calls to IT_FIND_XALAN2_JAR,
	IT_FIND_XALAN2_SERIALIZER_JAR and
	IT_FIND_XERCES2_JAR with call to
	IT_FIND_TOOL for xsltproc.
	* patches/boot/xsltproc.patch:
	Patch jvmti.make in HotSpot to use
	xsltproc instead of Java's XSLT
	when bootstrapping.
	* patches/headers.patch:
	Remove addition of $(ENDORSED) to
	jvmti.make.

2011-05-25  Andrew John Hughes  <ahughes@redhat.com>

	Fix make distcheck.
	* Makefile.am:
	(EXTRA_DIST): Remove hotspot/default/*.patch.
	Add jamvm/*.patch.