@@ -10,13 +10,13 @@ JDK_CHANGESET = 1571aa7abe47
 LANGTOOLS_CHANGESET = 8e26c4aee63c
 OPENJDK_CHANGESET = d4aea1a51d62
 
-CORBA_SHA256SUM = 60f8494b1ebf58db75fe8871dcbee1f6e4bd1d8d6c9b6ce49dad7a6a6340c4ac
-HOTSPOT_SHA256SUM = 6b2c5c9f5c1c603f742ddabb567d4abac23b91186ead4c1fc9d9643a07798e82
-JAXP_SHA256SUM = 9db874ee86a073776674b138c3bcd0b1b2bc90d31ed48d59f88021e93ac8a8d0
-JAXWS_SHA256SUM = 078ad45ced056d147344418e72dce6dca65e01c4ebf2b7008b74733774bcb24c
-JDK_SHA256SUM = 6d12de7cecd01c4ddef1a28fc393dfe5f8d66dea80b7d1484e028e8b921ac219
-LANGTOOLS_SHA256SUM = e1beab78534a3a0fb18404c3c200e8866da275c7c656172c9f295f11203e5f39
-OPENJDK_SHA256SUM = 856b791751e56f64cc10e4826eefc9af9882969b179595c9642f7c9771965e7d
+CORBA_SHA256SUM = 734085b7c91240bce89f0fc28f29b1bbe9b41da706ad0230fe341b5effbd2554
+HOTSPOT_SHA256SUM = bbc9cdefbb0811f9b7b7006c69cff64bbbe067a6762c49000fdb2ae29e6e610e
+JAXP_SHA256SUM = b980bd552f421a2560257f67358ea2adc68556accd719cac0c7980259e13b460
+JAXWS_SHA256SUM = 32507d9499987b92e88a036dd6e3784acf4ebec74902891c87a0db05ffe375f5
+JDK_SHA256SUM = b2a7d77a0807f79dd1569160549cc8038696fbce506f916fe9ea6f02eb514f0c
+LANGTOOLS_SHA256SUM = 8bb857b59ea2ffd7421bc91bbeb9c99831827a2119a3479c119a6a20ceba4b07
+OPENJDK_SHA256SUM = 74916d6627ea7f058981140a018e93b33393be961e4c670a96e6cf9ddcf0923d
 
 CACAO_VERSION = d6264eb66506
 CACAO_SHA256SUM = 94ea7899e806ccbc33a732b5113a8f969d8b1f4ce7ffd27cf04577054f65f63c
