@@ -1,3 +1,8 @@
+2011-06-06  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* Makefile.am:
+	Changed sha256 sums to fix the build issue.
+
 2011-05-28  Matthias Klose  <doko@ubuntu.com>
 
 	PR 704
